[package]
name = "desktop"
version = "0.0.0"
edition = "2021"

description = "An opinionated task management app"
homepage = "https://github.com/otterdone"
license = "MIT OR Apache-2.0"
repository = "https://github.com/otterdone/desktop"

[dependencies]
dioxus-desktop = "0.4.0"
otterdone = { path = "../otterdone" }
